--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel index.html",
+    "start": "parcel *.html",
     "build": "parcel build index.html"
   },
   "repository": {
